--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -99,9 +99,9 @@
                                 </div>
                                 <% } %>
                 </div>
-                <div class="col-8 mt-3 offset-3">
+                <div class="col-6 mt-3 offset-3">
                     <h3>Where you’ll be</h3>
-                    <div id="map"></div>
+                    <div class="card-img-top show-img" id="map"></div>
                 </div>
     </div>
     <script src="/js/map.js"></script>
