--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -8,9 +8,9 @@
       </div>
   
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="text-muted" href="https://twitter.com/omkarm59" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a></li>
-        <li class="ms-3"><a class="text-muted" href="https://www.linkedin.com/in/omkarm13/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
-        <li class="ms-3"><a class="text-muted" href="https://medium.com/@omkar13" target="_blank"><i class="fa-brands fa-medium"></i></a></li>
+        <li class="ms-3"><a class="text-muted" href="#" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a></li>
+        <li class="ms-3"><a class="text-muted" href="#" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+        <li class="ms-3"><a class="text-muted" href="#" target="_blank"><i class="fa-brands fa-medium"></i></a></li>
 
       </ul>
     </footer>
